<?xml version="1.0"?>
<package format="2">
  <name>gridmap_2d</name>
  <version>0.4.2</version>
  <description>
     gridmap_2d - a simple 2D gridmap structure, based on OpenCV's cv::Mat
  </description>
  <author>Armin Hornung</author>
  <license>BSD</license>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="aravindadp@gmail.com">Pramuditha Aravinda</maintainer>
  <maintainer email="kmjung@robotis.com">Kayman</maintainer>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url>http://ros.org/wiki/gridmap_2d</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>nav_msgs</depend>
  <depend>libopencv-dev</depend>
</package>
