<?xml version="1.0"?>
<package format="2">
  <name>humanoid_localization</name>
  <version>0.4.2</version>
  <description>
     <p>6D localization for humanoid robots based on depth data (laser, point clouds).
     Two observation models are currently available based on OctoMap as 3D map:
     Ray casting and an end point model (lookup in the distance map).</p>
     <p>Details can be found in the publication <br/>
     <em>"Humanoid Navigation with Dynamic Footstep Plans"</em>
     by A. Hornung, K.M. Wurm, and M. Bennewitz; published in 
     IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2010</p>
  </description>
  <license>GPL</license>
  <author>Armin Hornung</author>
  <author>Stefan Osswald</author>
  <author>Daniel Maier</author>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="aravindadp@gmail.com">Pramuditha Aravinda</maintainer>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url>http://ros.org/wiki/humanoid_localization</url>
  <buildtool_depend>catkin</buildtool_depend> 
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>octomap</depend>
</package>
