<?xml version="1.0"?>
<package format="2">
  <name>humanoid_planner_2d</name>
  <version>0.4.2</version>
  <description>
     humanoid_planner_2d - provides a simple 2D path planner as wrapper around
     SBPL (ARA*, AD*, R*).
  </description>
  <license>BSD</license>
  <author>Armin Hornung</author>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="aravindadp@gmail.com">Pramuditha Aravinda</maintainer>
  <maintainer email="kmjung@robotis.com">Kayman</maintainer>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url>http://ros.org/wiki/humanoid_planner_2d</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gridmap_2d</depend>
  <depend>sbpl</depend>
</package>
